# Blind-printing

./: README.md  db.sqlite3  pyproject.toml  test.py
backend/: .gitignore  db.sqlite3  pyproject.toml  test.py
backend/authentication/: models.py
backend/authentication/migrations/: 0001_initial.py
backend/blind/: models.py  serializers.py  views.py
backend/blind/migrations/: 0007_alter_typingresult_time_taken.py  0009_alter_typingresult_accuracy_and_more.py  0010_theory_image_alter_theory_content.py  0011_alter_theory_image.py  0012_alter_texttemplates_character_count.py
backend/blind/static/css/: base.css  leaderboard.css
backend/blind/static/js/: a.js
backend/blind/templates/: index.html  leaderboard.html  theory.html
backend/myproject/: settings.py  urls.py
backend/templates/: base.html
backend/users/: urls.py
backend/users/templates/: login.html
blind/: admin.py  models.py  utils.py  views.py
blind/migrations/: 0001_initial.py  0002_theory.py  0003_texttemplates_delete_text.py  0004_alter_texttemplates_options.py  0005_typingresult.py  0006_remove_typingresult_text_template.py  0008_typingresult_accuracy_typingresult_print_speed_and_more.py
blind/templates/: index.html  test.html  theory.html
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
myproject/: settings.py  urls.py
templates/: base.html
theory/: admin.py  apps.py  views.py
theory/migrations/: 0001_initial.py  0002_alter_theory_options_alter_theory_slug_and_more.py
users/: forms.py  urls.py  views.py
(+30 files in other folders)
