[tool.poetry]
name = "cursive-printing"
version = "0.1.0"
description = ""
authors = ["IlyaChuvilko <89748002+ChuvilkoDEV@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
django-debug-toolbar = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
