[tool.poetry]
name = "cursive-printing"
version = "0.1.0"
description = ""
authors = ["IlyaChuvilko <89748002+ChuvilkoDEV@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
django-debug-toolbar = "^4.3.0"
django-tables2 = "^2.7.0"
django-cors-headers = "^4.3.1"
pyjwt = "^2.8.0"
django-extensions = "^3.2.3"
drf-yasg = "^1.21.7"
setuptools = "^70.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
